--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, winter;
+}
 
 :root {
   --background: #ffffff;
